# DataAnalyst_Projetos_RoadMap

./: .gitignore  README.md
Curso em vídeo - Python/Revisão exercício 115/: EX115_V2.py  pessoas
Mysql/Projeto Olist/: queries_itens.sql  queries_order_payments.sql  queries_order_reviews.sql  queries_orders.sql  queries_products.sql
Pandas/: pyproject.toml
Pandas/Definicoes/: 04.DataFrames_atributos&metodos.py  05.filtros.py  06.novas_colunas_ordenacao.py  07.ASTYPE_Replace.py  08.como_lidar_dados_faltantes.py  09.duplicatas.py  10.Agrupamentos_sumarizacao.py  11. merge_concat.py
Pandas/Definicoes/03.importacoes_arquivos/: 03.Importacao_arquivos.py  clientes.xlsx
Pandas/Exercicios/: 01.first_steps_pandas.py  02.iloc_loc_Pandas.py  5.5.selecione_transacao.py  5.5.selecione_transacao.sql  6.4.quem_teve_mais_transacoes_streak.py  6.4.quem_teve_mais_transacoes_streak.sql  CaseIpea.py  tabela_final.csv
Pandas/Exercicios/03.importacoes_arquivos/: UF.csv  clientes.csv  clientes.parquet
Pandas/dataset_pandas/: clientes.csv
Pandas/dia_01/: first_steps_pandas.py
Projeto Portifólio 1/: DataViz_Projeto Portifolio.twb  ~DataViz_Projeto Portifolio__25120.twbr  ~DataViz_Projeto Portifolio__25564.twbr
SQL/DataLemur/: Histogram of Tweets.sql  Page With No Likes.sql
SQL/Index-Extra/: consultaindex.sql  pandas_tabela.py  produtos.csv
SQL/SQL - Curso Teo_me_why/: clientes.csv  informações tabelas exploradas  queries.sql  teste.sql
SQL/SQL - Curso Teo_me_why/Exercicios _where/: 2.pedidos_realizados_fds.sql  5,6,7.lista_de_produtos_inicia_com_usoDoLike.sql  (+4 more)
(+37 files in other folders)
