[project]
name = "pandas_installation"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Yuken",email = "eaiyukenish4.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
